test/e2e/features/tracing/testdata/otel-collector-secure.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: otel-collector-conf
  labels:
    app: otel-collector
    component: otel-collector-conf
data:
  otel-collector-config: |
    receivers:
      otlp:
        protocols:
          grpc:
            include_metadata: true
            endpoint: 0.0.0.0:4317
            tls:
              cert_file: /conf/collector.crt
              key_file: /conf/collector.key
    processors:
    exporters:
      debug:
        verbosity: detailed
    service:
      extensions: []
      pipelines:
        logs:
          receivers: [otlp]
          processors: []
          exporters: [debug]
        traces:
          receivers: [otlp]
          processors: []
          exporters: [debug]
      telemetry:
        logs:
          level: "DEBUG"
          development: true
          encoding: "json"
  collector.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDFTCCAf2gAwIBAgIUIlv+uw9O1gTwKnf4HvCIFusHWh4wDQYJKoZIhvcNAQEL
[...]
    cmk3NzvSnsKQt+jTR3DZWdUR5Iua0WP6xw==
    -----END CERTIFICATE-----
  collector.key: |
    -----BEGIN PRIVATE KEY-----
    MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCSYsP7GmKFw57y
[...]
    OHnItVU7MYDTZ9YUeQ/cdg==
    -----END PRIVATE KEY-----
---
apiVersion: v1
kind: Pod
metadata:
  name: otel-collector
  labels:
    app: otel-collector
    component: otel-collector
    app.kubernetes.io/name: otel-collector
spec:
  containers:
  - command:
      - "/otelcol-contrib"
      - "--config"
      - "/conf/otel-collector-config.yaml"
    image: otel/opentelemetry-collector-contrib:0.116.1
    name: otel-collector
    resources:
      limits:
        cpu: 1
        memory: 2Gi
      requests:
        cpu: 200m
        memory: 400Mi
    ports: # Comment out ports for platforms as needed.
    - containerPort: 4317 # Default gRPC endpoint for OpenTelemetry receiver.
    volumeMounts:
    - name: otel-collector-config-vol
      mountPath: /conf
  volumes:
    - name: otel-collector-config-vol
      configMap:
        name: otel-collector-conf
        items:
          - key: otel-collector-config
            path: otel-collector-config.yaml
          - key: collector.crt
            path: collector.crt
          - key: collector.key
            path: collector.key
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    app: otel-collector
    component: otel-collector
    app.kubernetes.io/name: opentelemetry
spec:
  ports:
  - name: otlp-grpc # Default endpoint for OpenTelemetry gRPC receiver.
    port: 4317
    protocol: TCP
    targetPort: 4317
    appProtocol: grpc
  selector:
    app.kubernetes.io/name: otel-collector
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ca
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDFTCCAf2gAwIBAgIUIlv+uw9O1gTwKnf4HvCIFusHWh4wDQYJKoZIhvcNAQEL
[...]
    cmk3NzvSnsKQt+jTR3DZWdUR5Iua0WP6xw==
    -----END CERTIFICATE-----
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: otel-collector-tls-policy
  labels:
    app: otel-collector
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: otel-collector
  validation:
    hostname: "example.com"
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: ca
