test/e2e/features/tracing/testdata/route-tracing-disable-policy.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-tracing-disable-policy
  namespace: httpbin
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: tracing
  tracing:
    disable: {}
