test/e2e/features/tracing/testdata/route-tracing-policy.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-tracing-policy
  namespace: httpbin
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: tracing
  tracing:
    randomSampling: 100
    overallSampling: 100
    attributes:
      - name: route-tag
        literal:
          value: route-tag-value
      - name: route-request-header
        requestHeader:
          name: x-route-header
